--- a/software.html
+++ b/software.html
@@ -39,12 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BatonFinancialServicesInc/743999683846986-software-engineer'>Baton Financial Services, Inc. Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nSblqMw5'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9As9fw4&__jvst=Employee+Referral&__jvsd=somUJhw9&__jvsc=Twitter&bid=nHtlqMwc'>ServiceNow Careers - Staff Software Engineer, Emerging Interfaces Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concurrency/1390dadb-4042-430f-9431-19ef2d64ed73'>Concurrency - Senior Software Developer</a></h5> 
+<p><span class="badge badge-light">Minneapolis, MN</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/concurrency/2d7ce781-89c2-4a04-9515-fb742a8c6a38'>Concurrency - Senior Software Developer</a></h5> 
+<p><span class="badge badge-light">Chicago, IL</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/concurrency/c8df7766-ec46-43cd-b8f1-ab1e99f9cad1'>Concurrency - Senior Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://careers.yash.com/job/Hyderabad-Sr_-Software-Engineer-Hybris-Job-Tela/540876610/'>Sr. Software Engineer - Hybris Job</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<p><span class="badge badge-light">Tennessee United States  North America</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nSblqMw5'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
+<p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oKJpafwM&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nsBkqMw4'>NICE Careers - Sr.Full Stack Developer / Senior Software Engineer</a></h5> 
@@ -55,7 +79,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698625073-software-engineer-iii-back-end-java-aws-'>Accolade, Inc. Software Engineer III (Back-End - Java & AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -91,7 +115,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698624593-software-engineer-ii-python-sql-'>Accolade, Inc. Software Engineer II (Python & SQL) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698624593-software-engineer-ii-python-sql-'>Accolade, Inc. Software Engineer II (Python & SQL) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -99,7 +123,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ooqibfw1&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nfwhqMwJ'>NICE inContact Careers - Software Engineer I</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ooqibfw1&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nfwhqMwJ'>NICE inContact Careers - Software Engineer I</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -161,7 +185,7 @@
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/78Yn8BGSgg/MidLevel-Software-Engineer'>Mid-Level Software Engineer - Optel Group - Career Page</a></h5> 
+<h5><a href='http://optelgroup.applytojob.com/apply/78Yn8BGSgg/MidLevel-Software-Engineer'>Mid-Level Software Engineer - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -181,7 +205,7 @@
 <p><span class="badge badge-light">Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
+<h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -227,7 +251,7 @@
 <p><span class="badge badge-light">Houston, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698616438-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698616438-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -247,7 +271,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -267,7 +291,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/westwing-home-and-living/job/oPlobfwt'>Westwing Careers - Senior Software Engineer - Node.js (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/westwing-home-and-living/job/oPlobfwt'>Westwing Careers - Senior Software Engineer - Node.js (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -323,7 +347,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -339,7 +363,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oitsbfw8&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nxg0pMwt'>New Relic Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oitsbfw8&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nxg0pMwt'>New Relic Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -418,30 +442,6 @@
 <h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1927643'>Job Application for Instructional Associate - Software Engineering Immersive at General Assembly</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nu0RpMw1'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
-<p><span class="badge badge-light">Indianapolis, IN</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698554130-graduate-software-engineer'>Turnitin, LLC Graduate Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=ogMhbfwe&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nviQpMwj'>Egnyte Careers - Software Engineer (Hybrid Cloud)</a></h5> 
-<p><span class="badge badge-light">Raleigh, North Carolina</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
-<p><span class="badge badge-light">United States  Berkeley</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
-<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/postmates/jobs/1486667?gh_src=843d815d1'>Job Application for Software Engineer, Backend at Postmates</a></h5> 
-<p><span class="badge badge-light">San Francisco Los Angeles</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
